y.output
   0  $accept : Program $end

   1  Program : Decl_PLUS

   2  Decl : VariableDecl
   3       | FunctionDecl
   4       | ClassDecl
   5       | InterfaceDecl

   6  Decl_PLUS : Decl
   7            | Decl_PLUS Decl

   8  VariableDecl : Variable SEMICOLON

   9  VariableDecl_MULT : VariableDecl_MULT VariableDecl
  10                    |

  11  Variable : Type ID
  12           | Type ID ASSIGNOP Expr

  13  Type : INT
  14       | DOUBLE
  15       | BOOLEAN
  16       | STRING
  17       | Type LEFTBRACKET RIGHTBRACKET
  18       | ID

  19  FunctionDecl : Type ID LEFTPAREN Formals RIGHTPAREN StmtBlock
  20               | VOID ID LEFTPAREN Formals RIGHTPAREN StmtBlock

  21  Variable_PLUS : Variable
  22                | Variable_PLUS COMMA Variable

  23  Formals : Variable_PLUS
  24          |

  25  ID_PLUS : ID
  26          | ID_PLUS COMMA ID

  27  EXTEND_ZOO :
  28             | EXTENDS ID

  29  IMPLEMENT_ZOO :
  30                | IMPLEMENTS ID_PLUS

  31  ClassDecl : CLASS ID EXTEND_ZOO IMPLEMENT_ZOO LEFTBRACE Field_MULT RIGHTBRACE

  32  Field : VariableDecl
  33        | FunctionDecl

  34  Field_MULT : Field_MULT Field
  35             |

  36  InterfaceDecl : INTERFACE ID LEFTBRACE Prototype_MULT RIGHTBRACE

  37  Prototype : Type ID LEFTPAREN Formals RIGHTPAREN SEMICOLON
  38            | VOID ID LEFTPAREN Formals RIGHTPAREN SEMICOLON

  39  Prototype_MULT : Prototype_MULT Prototype
  40                 |

  41  StmtBlock : LEFTBRACE VariableDecl_MULT Stmt_MULT RIGHTBRACE

  42  Stmt : Expr_ZOO SEMICOLON
  43       | IfStmt
  44       | WhileStmt
  45       | ForStmt
  46       | BreakStmt
  47       | ReturnStmt
  48       | PrintStmt
  49       | StmtBlock

  50  Stmt_MULT : Stmt_MULT Stmt
  51            |

  52  Else_ZOO :
  53           | ELSE Stmt

  54  IfStmt : IF LEFTPAREN Expr RIGHTPAREN Stmt Else_ZOO

  55  WhileStmt : WHILE LEFTPAREN Expr RIGHTPAREN Stmt

  56  ForStmt : FOR LEFTPAREN Expr_ZOO SEMICOLON Expr SEMICOLON Expr_ZOO RIGHTPAREN Stmt

  57  BreakStmt : BREAK SEMICOLON

  58  ReturnStmt : RETURN Expr_ZOO SEMICOLON

  59  PrintStmt : PRINTLN LEFTPAREN Expr_PLUS RIGHTPAREN SEMICOLON

  60  Expr : Lvalue ASSIGNOP Expr
  61       | Constant
  62       | Lvalue
  63       | THIS
  64       | Call
  65       | LEFTPAREN Expr RIGHTPAREN
  66       | Expr PLUS Expr
  67       | Expr MINUS Expr
  68       | Expr MULTIPLICATION Expr
  69       | Expr DIVISION Expr
  70       | Expr MOD Expr
  71       | MINUS Expr
  72       | Expr LESS Expr
  73       | Expr LESSEQUAL Expr
  74       | Expr GREATER Expr
  75       | Expr GREATEREQUAL Expr
  76       | Expr EQUAL Expr
  77       | Expr NOTEQUAL Expr
  78       | Expr AND Expr
  79       | Expr OR Expr
  80       | NOT Expr
  81       | READLN LEFTPAREN RIGHTPAREN
  82       | NEW LEFTPAREN ID RIGHTPAREN
  83       | NEWARRAY LEFTPAREN INTCONSTANT COMMA Type RIGHTPAREN

  84  Expr_ZOO :
  85           | Expr

  86  Expr_PLUS : Expr
  87            | Expr_PLUS COMMA Expr

  88  Lvalue : ID
  89         | Lvalue LEFTBRACKET Expr RIGHTBRACKET
  90         | Lvalue PERIOD ID

  91  Call : ID LEFTPAREN Actuals RIGHTPAREN
  92       | ID PERIOD ID LEFTPAREN Actuals RIGHTPAREN

  93  Actuals : Expr_PLUS
  94          |

  95  Constant : INTCONSTANT
  96           | DOUBLECONSTANT
  97           | STRINGCONSTANT
  98           | BOOLEANCONSTANT
  99           | NULL

state 0
	$accept : . Program $end  (0)

	BOOLEAN  shift 1
	CLASS  shift 2
	DOUBLE  shift 3
	INT  shift 4
	INTERFACE  shift 5
	STRING  shift 6
	VOID  shift 7
	ID  shift 8
	.  error

	Program  goto 9
	Decl_PLUS  goto 10
	Decl  goto 11
	VariableDecl  goto 12
	FunctionDecl  goto 13
	ClassDecl  goto 14
	InterfaceDecl  goto 15
	Variable  goto 16
	Type  goto 17


state 1
	Type : BOOLEAN .  (15)

	.  reduce 15


state 2
	ClassDecl : CLASS . ID EXTEND_ZOO IMPLEMENT_ZOO LEFTBRACE Field_MULT RIGHTBRACE  (31)

	ID  shift 18
	.  error


state 3
	Type : DOUBLE .  (14)

	.  reduce 14


state 4
	Type : INT .  (13)

	.  reduce 13


state 5
	InterfaceDecl : INTERFACE . ID LEFTBRACE Prototype_MULT RIGHTBRACE  (36)

	ID  shift 19
	.  error


state 6
	Type : STRING .  (16)

	.  reduce 16


state 7
	FunctionDecl : VOID . ID LEFTPAREN Formals RIGHTPAREN StmtBlock  (20)

	ID  shift 20
	.  error


state 8
	Type : ID .  (18)

	.  reduce 18


state 9
	$accept : Program . $end  (0)

	$end  accept


state 10
	Program : Decl_PLUS .  (1)
	Decl_PLUS : Decl_PLUS . Decl  (7)

	BOOLEAN  shift 1
	CLASS  shift 2
	DOUBLE  shift 3
	INT  shift 4
	INTERFACE  shift 5
	STRING  shift 6
	VOID  shift 7
	ID  shift 8
	$end  reduce 1

	Decl  goto 21
	VariableDecl  goto 12
	FunctionDecl  goto 13
	ClassDecl  goto 14
	InterfaceDecl  goto 15
	Variable  goto 16
	Type  goto 17


state 11
	Decl_PLUS : Decl .  (6)

	.  reduce 6


state 12
	Decl : VariableDecl .  (2)

	.  reduce 2


state 13
	Decl : FunctionDecl .  (3)

	.  reduce 3


state 14
	Decl : ClassDecl .  (4)

	.  reduce 4


state 15
	Decl : InterfaceDecl .  (5)

	.  reduce 5


state 16
	VariableDecl : Variable . SEMICOLON  (8)

	SEMICOLON  shift 22
	.  error


state 17
	Variable : Type . ID  (11)
	Variable : Type . ID ASSIGNOP Expr  (12)
	Type : Type . LEFTBRACKET RIGHTBRACKET  (17)
	FunctionDecl : Type . ID LEFTPAREN Formals RIGHTPAREN StmtBlock  (19)

	ID  shift 23
	LEFTBRACKET  shift 24
	.  error


state 18
	ClassDecl : CLASS ID . EXTEND_ZOO IMPLEMENT_ZOO LEFTBRACE Field_MULT RIGHTBRACE  (31)
	EXTEND_ZOO : .  (27)

	EXTENDS  shift 25
	IMPLEMENTS  reduce 27
	LEFTBRACE  reduce 27

	EXTEND_ZOO  goto 26


state 19
	InterfaceDecl : INTERFACE ID . LEFTBRACE Prototype_MULT RIGHTBRACE  (36)

	LEFTBRACE  shift 27
	.  error


state 20
	FunctionDecl : VOID ID . LEFTPAREN Formals RIGHTPAREN StmtBlock  (20)

	LEFTPAREN  shift 28
	.  error


state 21
	Decl_PLUS : Decl_PLUS Decl .  (7)

	.  reduce 7


state 22
	VariableDecl : Variable SEMICOLON .  (8)

	.  reduce 8


state 23
	Variable : Type ID .  (11)
	Variable : Type ID . ASSIGNOP Expr  (12)
	FunctionDecl : Type ID . LEFTPAREN Formals RIGHTPAREN StmtBlock  (19)

	LEFTPAREN  shift 29
	ASSIGNOP  shift 30
	SEMICOLON  reduce 11


state 24
	Type : Type LEFTBRACKET . RIGHTBRACKET  (17)

	RIGHTBRACKET  shift 31
	.  error


state 25
	EXTEND_ZOO : EXTENDS . ID  (28)

	ID  shift 32
	.  error


state 26
	ClassDecl : CLASS ID EXTEND_ZOO . IMPLEMENT_ZOO LEFTBRACE Field_MULT RIGHTBRACE  (31)
	IMPLEMENT_ZOO : .  (29)

	IMPLEMENTS  shift 33
	LEFTBRACE  reduce 29

	IMPLEMENT_ZOO  goto 34


state 27
	InterfaceDecl : INTERFACE ID LEFTBRACE . Prototype_MULT RIGHTBRACE  (36)
	Prototype_MULT : .  (40)

	.  reduce 40

	Prototype_MULT  goto 35


state 28
	FunctionDecl : VOID ID LEFTPAREN . Formals RIGHTPAREN StmtBlock  (20)
	Formals : .  (24)

	BOOLEAN  shift 1
	DOUBLE  shift 3
	INT  shift 4
	STRING  shift 6
	ID  shift 8
	RIGHTPAREN  reduce 24

	Variable  goto 36
	Type  goto 37
	Formals  goto 38
	Variable_PLUS  goto 39


state 29
	FunctionDecl : Type ID LEFTPAREN . Formals RIGHTPAREN StmtBlock  (19)
	Formals : .  (24)

	BOOLEAN  shift 1
	DOUBLE  shift 3
	INT  shift 4
	STRING  shift 6
	ID  shift 8
	RIGHTPAREN  reduce 24

	Variable  goto 36
	Type  goto 37
	Formals  goto 40
	Variable_PLUS  goto 39


state 30
	Variable : Type ID ASSIGNOP . Expr  (12)

	NEW  shift 41
	NEWARRAY  shift 42
	NULL  shift 43
	READLN  shift 44
	THIS  shift 45
	ID  shift 46
	LEFTPAREN  shift 47
	INTCONSTANT  shift 48
	DOUBLECONSTANT  shift 49
	STRINGCONSTANT  shift 50
	BOOLEANCONSTANT  shift 51
	NOT  shift 52
	MINUS  shift 53
	.  error

	Expr  goto 54
	Lvalue  goto 55
	Constant  goto 56
	Call  goto 57


state 31
	Type : Type LEFTBRACKET RIGHTBRACKET .  (17)

	.  reduce 17


state 32
	EXTEND_ZOO : EXTENDS ID .  (28)

	.  reduce 28


state 33
	IMPLEMENT_ZOO : IMPLEMENTS . ID_PLUS  (30)

	ID  shift 58
	.  error

	ID_PLUS  goto 59


state 34
	ClassDecl : CLASS ID EXTEND_ZOO IMPLEMENT_ZOO . LEFTBRACE Field_MULT RIGHTBRACE  (31)

	LEFTBRACE  shift 60
	.  error


state 35
	InterfaceDecl : INTERFACE ID LEFTBRACE Prototype_MULT . RIGHTBRACE  (36)
	Prototype_MULT : Prototype_MULT . Prototype  (39)

	BOOLEAN  shift 1
	DOUBLE  shift 3
	INT  shift 4
	STRING  shift 6
	VOID  shift 61
	ID  shift 8
	RIGHTBRACE  shift 62
	.  error

	Type  goto 63
	Prototype  goto 64


state 36
	Variable_PLUS : Variable .  (21)

	.  reduce 21


state 37
	Variable : Type . ID  (11)
	Variable : Type . ID ASSIGNOP Expr  (12)
	Type : Type . LEFTBRACKET RIGHTBRACKET  (17)

	ID  shift 65
	LEFTBRACKET  shift 24
	.  error


state 38
	FunctionDecl : VOID ID LEFTPAREN Formals . RIGHTPAREN StmtBlock  (20)

	RIGHTPAREN  shift 66
	.  error


state 39
	Variable_PLUS : Variable_PLUS . COMMA Variable  (22)
	Formals : Variable_PLUS .  (23)

	COMMA  shift 67
	RIGHTPAREN  reduce 23


state 40
	FunctionDecl : Type ID LEFTPAREN Formals . RIGHTPAREN StmtBlock  (19)

	RIGHTPAREN  shift 68
	.  error


state 41
	Expr : NEW . LEFTPAREN ID RIGHTPAREN  (82)

	LEFTPAREN  shift 69
	.  error


state 42
	Expr : NEWARRAY . LEFTPAREN INTCONSTANT COMMA Type RIGHTPAREN  (83)

	LEFTPAREN  shift 70
	.  error


state 43
	Constant : NULL .  (99)

	.  reduce 99


state 44
	Expr : READLN . LEFTPAREN RIGHTPAREN  (81)

	LEFTPAREN  shift 71
	.  error


state 45
	Expr : THIS .  (63)

	.  reduce 63


46: shift/reduce conflict (shift 73, reduce 88) on PERIOD
state 46
	Lvalue : ID .  (88)
	Call : ID . LEFTPAREN Actuals RIGHTPAREN  (91)
	Call : ID . PERIOD ID LEFTPAREN Actuals RIGHTPAREN  (92)

	LEFTPAREN  shift 72
	PERIOD  shift 73
	RIGHTPAREN  reduce 88
	LEFTBRACKET  reduce 88
	RIGHTBRACKET  reduce 88
	SEMICOLON  reduce 88
	COMMA  reduce 88
	MULTIPLICATION  reduce 88
	DIVISION  reduce 88
	MOD  reduce 88
	PLUS  reduce 88
	MINUS  reduce 88
	LESS  reduce 88
	LESSEQUAL  reduce 88
	GREATER  reduce 88
	GREATEREQUAL  reduce 88
	EQUAL  reduce 88
	NOTEQUAL  reduce 88
	AND  reduce 88
	OR  reduce 88
	ASSIGNOP  reduce 88


state 47
	Expr : LEFTPAREN . Expr RIGHTPAREN  (65)

	NEW  shift 41
	NEWARRAY  shift 42
	NULL  shift 43
	READLN  shift 44
	THIS  shift 45
	ID  shift 46
	LEFTPAREN  shift 47
	INTCONSTANT  shift 48
	DOUBLECONSTANT  shift 49
	STRINGCONSTANT  shift 50
	BOOLEANCONSTANT  shift 51
	NOT  shift 52
	MINUS  shift 53
	.  error

	Expr  goto 74
	Lvalue  goto 55
	Constant  goto 56
	Call  goto 57


state 48
	Constant : INTCONSTANT .  (95)

	.  reduce 95


state 49
	Constant : DOUBLECONSTANT .  (96)

	.  reduce 96


state 50
	Constant : STRINGCONSTANT .  (97)

	.  reduce 97


state 51
	Constant : BOOLEANCONSTANT .  (98)

	.  reduce 98


state 52
	Expr : NOT . Expr  (80)

	NEW  shift 41
	NEWARRAY  shift 42
	NULL  shift 43
	READLN  shift 44
	THIS  shift 45
	ID  shift 46
	LEFTPAREN  shift 47
	INTCONSTANT  shift 48
	DOUBLECONSTANT  shift 49
	STRINGCONSTANT  shift 50
	BOOLEANCONSTANT  shift 51
	NOT  shift 52
	MINUS  shift 53
	.  error

	Expr  goto 75
	Lvalue  goto 55
	Constant  goto 56
	Call  goto 57


state 53
	Expr : MINUS . Expr  (71)

	NEW  shift 41
	NEWARRAY  shift 42
	NULL  shift 43
	READLN  shift 44
	THIS  shift 45
	ID  shift 46
	LEFTPAREN  shift 47
	INTCONSTANT  shift 48
	DOUBLECONSTANT  shift 49
	STRINGCONSTANT  shift 50
	BOOLEANCONSTANT  shift 51
	NOT  shift 52
	MINUS  shift 53
	.  error

	Expr  goto 76
	Lvalue  goto 55
	Constant  goto 56
	Call  goto 57


state 54
	Variable : Type ID ASSIGNOP Expr .  (12)
	Expr : Expr . PLUS Expr  (66)
	Expr : Expr . MINUS Expr  (67)
	Expr : Expr . MULTIPLICATION Expr  (68)
	Expr : Expr . DIVISION Expr  (69)
	Expr : Expr . MOD Expr  (70)
	Expr : Expr . LESS Expr  (72)
	Expr : Expr . LESSEQUAL Expr  (73)
	Expr : Expr . GREATER Expr  (74)
	Expr : Expr . GREATEREQUAL Expr  (75)
	Expr : Expr . EQUAL Expr  (76)
	Expr : Expr . NOTEQUAL Expr  (77)
	Expr : Expr . AND Expr  (78)
	Expr : Expr . OR Expr  (79)

	MULTIPLICATION  shift 77
	DIVISION  shift 78
	MOD  shift 79
	PLUS  shift 80
	MINUS  shift 81
	LESS  shift 82
	LESSEQUAL  shift 83
	GREATER  shift 84
	GREATEREQUAL  shift 85
	EQUAL  shift 86
	NOTEQUAL  shift 87
	AND  shift 88
	OR  shift 89
	RIGHTPAREN  reduce 12
	SEMICOLON  reduce 12
	COMMA  reduce 12


state 55
	Expr : Lvalue . ASSIGNOP Expr  (60)
	Expr : Lvalue .  (62)
	Lvalue : Lvalue . LEFTBRACKET Expr RIGHTBRACKET  (89)
	Lvalue : Lvalue . PERIOD ID  (90)

	LEFTBRACKET  shift 90
	PERIOD  shift 91
	ASSIGNOP  shift 92
	RIGHTPAREN  reduce 62
	RIGHTBRACKET  reduce 62
	SEMICOLON  reduce 62
	COMMA  reduce 62
	MULTIPLICATION  reduce 62
	DIVISION  reduce 62
	MOD  reduce 62
	PLUS  reduce 62
	MINUS  reduce 62
	LESS  reduce 62
	LESSEQUAL  reduce 62
	GREATER  reduce 62
	GREATEREQUAL  reduce 62
	EQUAL  reduce 62
	NOTEQUAL  reduce 62
	AND  reduce 62
	OR  reduce 62


state 56
	Expr : Constant .  (61)

	.  reduce 61


state 57
	Expr : Call .  (64)

	.  reduce 64


state 58
	ID_PLUS : ID .  (25)

	.  reduce 25


state 59
	ID_PLUS : ID_PLUS . COMMA ID  (26)
	IMPLEMENT_ZOO : IMPLEMENTS ID_PLUS .  (30)

	COMMA  shift 93
	LEFTBRACE  reduce 30


state 60
	ClassDecl : CLASS ID EXTEND_ZOO IMPLEMENT_ZOO LEFTBRACE . Field_MULT RIGHTBRACE  (31)
	Field_MULT : .  (35)

	.  reduce 35

	Field_MULT  goto 94


state 61
	Prototype : VOID . ID LEFTPAREN Formals RIGHTPAREN SEMICOLON  (38)

	ID  shift 95
	.  error


state 62
	InterfaceDecl : INTERFACE ID LEFTBRACE Prototype_MULT RIGHTBRACE .  (36)

	.  reduce 36


state 63
	Type : Type . LEFTBRACKET RIGHTBRACKET  (17)
	Prototype : Type . ID LEFTPAREN Formals RIGHTPAREN SEMICOLON  (37)

	ID  shift 96
	LEFTBRACKET  shift 24
	.  error


state 64
	Prototype_MULT : Prototype_MULT Prototype .  (39)

	.  reduce 39


state 65
	Variable : Type ID .  (11)
	Variable : Type ID . ASSIGNOP Expr  (12)

	ASSIGNOP  shift 30
	RIGHTPAREN  reduce 11
	SEMICOLON  reduce 11
	COMMA  reduce 11


state 66
	FunctionDecl : VOID ID LEFTPAREN Formals RIGHTPAREN . StmtBlock  (20)

	LEFTBRACE  shift 97
	.  error

	StmtBlock  goto 98


state 67
	Variable_PLUS : Variable_PLUS COMMA . Variable  (22)

	BOOLEAN  shift 1
	DOUBLE  shift 3
	INT  shift 4
	STRING  shift 6
	ID  shift 8
	.  error

	Variable  goto 99
	Type  goto 37


state 68
	FunctionDecl : Type ID LEFTPAREN Formals RIGHTPAREN . StmtBlock  (19)

	LEFTBRACE  shift 97
	.  error

	StmtBlock  goto 100


state 69
	Expr : NEW LEFTPAREN . ID RIGHTPAREN  (82)

	ID  shift 101
	.  error


state 70
	Expr : NEWARRAY LEFTPAREN . INTCONSTANT COMMA Type RIGHTPAREN  (83)

	INTCONSTANT  shift 102
	.  error


state 71
	Expr : READLN LEFTPAREN . RIGHTPAREN  (81)

	RIGHTPAREN  shift 103
	.  error


state 72
	Call : ID LEFTPAREN . Actuals RIGHTPAREN  (91)
	Actuals : .  (94)

	NEW  shift 41
	NEWARRAY  shift 42
	NULL  shift 43
	READLN  shift 44
	THIS  shift 45
	ID  shift 46
	LEFTPAREN  shift 47
	INTCONSTANT  shift 48
	DOUBLECONSTANT  shift 49
	STRINGCONSTANT  shift 50
	BOOLEANCONSTANT  shift 51
	NOT  shift 52
	MINUS  shift 53
	RIGHTPAREN  reduce 94

	Expr  goto 104
	Expr_PLUS  goto 105
	Lvalue  goto 55
	Constant  goto 56
	Call  goto 57
	Actuals  goto 106


state 73
	Call : ID PERIOD . ID LEFTPAREN Actuals RIGHTPAREN  (92)

	ID  shift 107
	.  error


state 74
	Expr : LEFTPAREN Expr . RIGHTPAREN  (65)
	Expr : Expr . PLUS Expr  (66)
	Expr : Expr . MINUS Expr  (67)
	Expr : Expr . MULTIPLICATION Expr  (68)
	Expr : Expr . DIVISION Expr  (69)
	Expr : Expr . MOD Expr  (70)
	Expr : Expr . LESS Expr  (72)
	Expr : Expr . LESSEQUAL Expr  (73)
	Expr : Expr . GREATER Expr  (74)
	Expr : Expr . GREATEREQUAL Expr  (75)
	Expr : Expr . EQUAL Expr  (76)
	Expr : Expr . NOTEQUAL Expr  (77)
	Expr : Expr . AND Expr  (78)
	Expr : Expr . OR Expr  (79)

	RIGHTPAREN  shift 108
	MULTIPLICATION  shift 77
	DIVISION  shift 78
	MOD  shift 79
	PLUS  shift 80
	MINUS  shift 81
	LESS  shift 82
	LESSEQUAL  shift 83
	GREATER  shift 84
	GREATEREQUAL  shift 85
	EQUAL  shift 86
	NOTEQUAL  shift 87
	AND  shift 88
	OR  shift 89
	.  error


state 75
	Expr : Expr . PLUS Expr  (66)
	Expr : Expr . MINUS Expr  (67)
	Expr : Expr . MULTIPLICATION Expr  (68)
	Expr : Expr . DIVISION Expr  (69)
	Expr : Expr . MOD Expr  (70)
	Expr : Expr . LESS Expr  (72)
	Expr : Expr . LESSEQUAL Expr  (73)
	Expr : Expr . GREATER Expr  (74)
	Expr : Expr . GREATEREQUAL Expr  (75)
	Expr : Expr . EQUAL Expr  (76)
	Expr : Expr . NOTEQUAL Expr  (77)
	Expr : Expr . AND Expr  (78)
	Expr : Expr . OR Expr  (79)
	Expr : NOT Expr .  (80)

	MULTIPLICATION  shift 77
	DIVISION  shift 78
	MOD  shift 79
	PLUS  shift 80
	MINUS  shift 81
	LESS  shift 82
	LESSEQUAL  shift 83
	GREATER  shift 84
	GREATEREQUAL  shift 85
	EQUAL  shift 86
	NOTEQUAL  shift 87
	AND  shift 88
	OR  shift 89
	RIGHTPAREN  reduce 80
	RIGHTBRACKET  reduce 80
	SEMICOLON  reduce 80
	COMMA  reduce 80


state 76
	Expr : Expr . PLUS Expr  (66)
	Expr : Expr . MINUS Expr  (67)
	Expr : Expr . MULTIPLICATION Expr  (68)
	Expr : Expr . DIVISION Expr  (69)
	Expr : Expr . MOD Expr  (70)
	Expr : MINUS Expr .  (71)
	Expr : Expr . LESS Expr  (72)
	Expr : Expr . LESSEQUAL Expr  (73)
	Expr : Expr . GREATER Expr  (74)
	Expr : Expr . GREATEREQUAL Expr  (75)
	Expr : Expr . EQUAL Expr  (76)
	Expr : Expr . NOTEQUAL Expr  (77)
	Expr : Expr . AND Expr  (78)
	Expr : Expr . OR Expr  (79)
